Fixed bug (overlap is too big)

--- a/src/styles/globalsL0.scss
+++ b/src/styles/globalsL0.scss
@@ -27,6 +27,7 @@ body {
     // font-size: 14px;
     font-size: 1.4rem;
     font-weight: 400;
+    line-height: 1.7;
     margin: 0;
     //  =14px
 
